--- a/lab5_problem3/theesaran/managerPage.html
+++ b/lab5_problem3/theesaran/managerPage.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/managerPage.css">
 </head>
 <style>
     .addDataBlock {
@@ -132,8 +132,7 @@
             asdsasd
         </p>
     </section> -->
-    <script type="text/javascript" src="data.json"></script>
-    <script src="srcipt.js"></script>
+    <script src="./scripts/managerPage.js"></script>
 </body>
 
 </html>
